@@ -597,6 +597,9 @@ Build
 Documentation
 -------------
 
+- Issue #15533: Clarify docs and add tests for subprocess.Popen()'s cwd
+  argument.
+
 - Issue #16036: Improve documentation of built-in int()'s signature and
   arguments.
 
